--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,28 +1,27 @@
 <div id="main-wrapper">
-    <app-header></app-header>
-    <app-sidebar></app-sidebar>
-    <div class="page-wrapper">
-      <div class="container-fluid">
-        <app-breadcrumbs></app-breadcrumbs>
-        <!-- Aqui va mi sistema de rutas -->
-        <div class="row">
-          <div class="col-12">
-            <div class="card">
-              <div class="card-body">
-                <!-- This is some text within a card block. -->
-                <router-outlet></router-outlet>
-              </div>
+  <app-header></app-header>
+  <app-sidebar></app-sidebar>
+  <div class="page-wrapper">
+    <div class="container-fluid">
+      <app-breadcrumbs></app-breadcrumbs>
+      <!-- Aqui va mi sistema de rutas -->
+      <router-outlet></router-outlet>
+      <!-- <div class="row">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-body">
             </div>
           </div>
         </div>
-      </div>
-      <!-- footer -->
-      <!-- ============================================================== -->
-      <footer class="footer">
-        © 2020 Admin Pro by wrappixel.com
-      </footer>
-      <!-- ============================================================== -->
-      <!-- End footer -->
-      <!-- ============================================================== -->
+      </div> -->
     </div>
+    <!-- footer -->
+    <!-- ============================================================== -->
+    <footer class="footer">
+      © 2020 Admin Pro by wrappixel.com
+    </footer>
+    <!-- ============================================================== -->
+    <!-- End footer -->
+    <!-- ============================================================== -->
   </div>
+</div>
