--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
-.fast{
-    -webkit-animation-duration:0.3s;
-    animation-duration:0.3s;
-    -webkit-animation-fill-mode:both;
-    animation-fill-mode:both
+.fast {
+  -webkit-animation-duration: 0.3s;
+  animation-duration: 0.3s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both
 }
 
 #themecolors .selector, .cursor {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 #google-btn {
@@ -19,4 +19,31 @@
 .img-avatar {
   height: 200px;
   width: 200px;
+}
+
+.w100 {
+  width: 100px;
+}
+
+.w140 {
+  width: 140px;
+}
+
+.avatar {
+  width: 50px;
+  border-radius: 100%;
+}
+
+.fondo-modal-imagen {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+
+.oculto{
+  display: none;
 }
