--- a/src/app/pages/mantenimientos/usuarios/usuarios.component.html
+++ b/src/app/pages/mantenimientos/usuarios/usuarios.component.html
@@ -5,7 +5,7 @@
         <input type="text"
                class="form-control"
                placeholder="Buscar usuario"
-               (keydown)="buscar(txtTermino.value)"
+               (keyup)="buscar(txtTermino.value)"
                #txtTermino/>
       </div>
     </div>
@@ -27,7 +27,7 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Total de usuarios ({{ totalUsuarios }})</h4>
-        <h6 class="card-subtitle">Usuarios registrados en la aplicación</h6>
+        <h6 class="card-subtitle">Usuarios registrados en mi aplicación</h6>
         <div class="table-responsive">
           <table class="table table-bordered">
             <thead>
