--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,10 @@
   width: 200px;
 }
 
+.w75 {
+  width: 75px;
+}
+
 .w100 {
   width: 100px;
 }
@@ -48,6 +52,6 @@
   z-index: 999;
 }
 
-.oculto{
+.oculto {
   display: none;
 }
